data/derived/fa15/progs/unify/prog4132.ml.out
Characters 74-75:
  else digitsOfInt (n / 10) @ [n & 10];;
                               ^
Error: This expression has type int but an expression was expected of type
         bool
